--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "todolist-mern",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server" : "nodemon server.js"
-  },
-  "author": "kedmenecr",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "concurrently": "^3.6.0",
-    "express": "^4.16.3",
-    "mongoose": "^5.1.7"
-  }
+	"name": "todolist-mern",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"client-install": "npm install --prefix client",
+		"start": "node server.js",
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
+	},
+	"author": "kedmenecr",
+	"license": "MIT",
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"concurrently": "^3.6.0",
+		"express": "^4.16.3",
+		"mongoose": "^5.1.7"
+	}
 }
